add 9.6 and 9.7 for later

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9994b7bc",
+   "id": "6cd64e28",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "57f51dc5",
+   "id": "8bffb749",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c2c9dd32",
+   "id": "027ebf45",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b04c1468",
+   "id": "edefe344",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e201bb4f",
+   "id": "ef90b903",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0d8ef52c",
+   "id": "cbf51777",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "29b5b201",
+   "id": "8128b0d4",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "4aabb996",
+   "id": "a7d80318",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc3bc350",
+   "id": "66148c91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4bf3d564",
+   "id": "2a2826ed",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e5afc179",
+   "id": "547b93b3",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "64299e83",
+   "id": "83ab7a88",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5e8206f4",
+   "id": "594640fb",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d138b31",
+   "id": "d63e645b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e03fde",
+   "id": "994ff88e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c672ab5f",
+   "id": "a3b100d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a82fb13e",
+   "id": "a219909d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1880a701",
+   "id": "c7b5f814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6663cb44",
+   "id": "1fcac7bb",
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "77a67339",
+   "id": "a9f4f65a",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7931d17",
+   "id": "02a4efc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "bd91efa4",
+   "id": "8d959249",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "91ab6578",
+   "id": "f41df54e",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "be72ef26",
+   "id": "0c1b3c67",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "638364dc",
+   "id": "79e0aad0",
    "metadata": {},
    "outputs": [
     {
@@ -1088,8 +1088,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "498360ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9.2\n",
+    "response = requests.get('http://uk.sagepub.com/')\n",
+    "website_content = response.text\n",
+    "page = BeautifulSoup(website_content, 'html.parser')\n",
+    "\n",
+    "imgs = page.find_all('img')\n",
+    "print(len(imgs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a3ee63c",
+   "metadata": {},
+   "source": [
+    "Exercise 9.6 Determine the total number of police reports on each of the various types of crime in the area around Hyde Park in London for the past one-month period. \n",
+    "\n",
+    "Exercise 9.7 Using the World Bank API (whose documentation is available at https:// datahelpdesk.worldbank.org/knowledgebase/articles/898590-country-api-queries), request the capital city of the country you are currently in, and print the output."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
-   "id": "215d6be4",
+   "id": "54a388d5",
    "metadata": {},
    "outputs": [
     {
@@ -1101,29 +1127,14 @@
     }
    ],
    "source": [
-    "# 9.2\n",
-    "response = requests.get('http://uk.sagepub.com/')\n",
-    "website_content = response.text\n",
-    "page = BeautifulSoup(website_content, 'html.parser')\n",
-    "\n",
-    "imgs = page.find_all('img')\n",
-    "print(len(imgs))\n",
-    "# , class_ ='infobox')\n",
-    "\n",
-    "# for row in infobox.find_all(\"tr\"): \n",
-    "#     if 'Born' in row.text: \n",
-    "#         born = years( row ) \n",
-    "#         if 'Died' in row.text: \n",
-    "#             died = years(row)\n",
-    "# print ( born , died )\n",
-    "#9.6\n",
+    "# 9.6\n",
     "# 9.7"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd99e7e",
+   "id": "633ca1b1",
    "metadata": {},
    "outputs": [],
    "source": []
